--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -6,11 +6,11 @@
 <body>
     <h1>あなたに合うコーヒー豆</h1>
     {% if status == "user_notfound" %}
-    <p>Species, Country.of.Origin</p>
+    <p>Species[], Country.of.Origin</p>
     {% elif status == "wrong_password" %}
-    <p>パスワードが間違っています。</p>
+    <p>Species, Country.of.Origin</p>
     {% elif status == "logout" %}
-    <p>ログアウトが完了しました。</p>
+    <p>Species, Country.of.Origin</p>
     {% endif %}
     </form>
 </body>
