--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -3,15 +3,13 @@
     <meta charset="UTF-8">
     <title>コーヒー豆の推薦</title>
 </head>
+<a href="/logout">最初の画面に戻る>
 <body>
     <h1>あなたに合うコーヒー豆</h1>
-    {% if status == "user_notfound" %}
-    <p>Species[], Country.of.Origin</p>
-    {% elif status == "wrong_password" %}
-    <p>Species, Country.of.Origin</p>
-    {% elif status == "logout" %}
+    {% if status == "相関" %}
     <p>Species, Country.of.Origin</p>
     {% endif %}
     </form>
+
 </body>
 </html>
