推薦システムの追加

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,8 +58,8 @@
   <input type="submit" value="Submit">
 </form> -->
 
-{% for word in okyo %}
-<p>{{word}}</p>
+{% for been in res %}
+<p>{{been}}</p>
 {% endfor %}
 
 </body>
