--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <title>コーヒー豆の推薦</title>
 </head>
-<a href="/logout">最初の画面に戻る>
+  <form action=" " method="POST">
+      <button type="submit", value="Button"> 最初のペイジーへ </button>
 <body>
     <h1>あなたに合うコーヒー豆</h1>
     {% if status == "相関" %}
