--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -3,9 +3,14 @@
     <meta charset="UTF-8">
     <title>コーヒー豆の推薦</title>
 </head>
-  <form action=" " method="POST">
-      <button type="submit", value="Button"> 最初のペイジーへ </button>
+  
 <body>
+    <input type="botton"value="最初のペイジーへ"onclick="nextPage()">
+<script>
+    function nextPage(){
+        location.href="index.html"
+    }
+</script>
     <h1>あなたに合うコーヒー豆</h1>
     {% if status == "相関" %}
     <p>Species, Country.of.Origin</p>
