--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,11 +48,15 @@
       <option value = 3>普通</option>
       <option value = 2>少し弱い</option>
       <option value = 1>弱い</option>
-    </select>
-  <input type="submit" value="豆を探す">
-  </select>
+    <input type="botton" value="豆を探す"onclick="nextPage()">
+  <script>
+      function nextPage(){
+          location.href="top.html"
+      }
+  </script>
+  
 </form> 
-
+<a href ="go_classification#index">
 <!-- <form action="/index" method="POST">
   <input type="text" name="name" placeholder="Enter name">
   <input type="submit" value="Submit">
