--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -5,9 +5,9 @@
 </head>
   
 <body>
-    <input type="botton"value="最初のペイジーへ"onclick="nextPage()">
+    <input type="botton"value="最初のペイジーへ"onclick="history_back()">
 <script>
-    function nextPage(){
+    function history_back(){
         location.href="index.html"
     }
 </script>
