項目の説明の追加

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,16 +64,29 @@
       }
   </script>
   
-</form> 
+  <h2>項目の説明</h2>
+  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒アロマ：香り</abbr></p>
+  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒フレーバ：味</abbr></p>
+  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒後味：飲んだ後に残る味</abbr></p>
+  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒酸味：コーヒー豆の酸度</abbr></p>
+  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒甘さ：コーヒー豆の糖度</abbr></p>
+  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒深み：コーヒー豆のコクの度合い</abbr></p>
+  
+  </form> 
+  
 <a href ="go_classification#index">
 <!-- <form action="/index" method="POST">
   <input type="text" name="name" placeholder="Enter name">
   <input type="submit" value="Submit">
 </form> -->
 
+<!--
 {% for been in res %}
 <p>{{been}}</p>
 {% endfor %}
+-->
+
+
 
 </body>
 </html>
