--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -6,7 +6,11 @@
   
 <body>
     <input type="botton" value="最初のページへ" onclick="history_back()">
-
+<script>
+    function history_back(){
+        location.href="index.html"
+    }
+</script>
 
 <h1>あなたに合うコーヒー豆</h1>
 
