--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,6 @@
         <option value = 2>少し弱い</option>
         <option value = 1>弱い</option>
     </select>
-
   <label for="fname">Flavor:</label>
     <select name="Flavor">
       <option value = 5>強い</option>
@@ -61,11 +60,11 @@
       <option value = 1>弱い</option>
     </select>
     <input type="submit" value="豆を探す"onclick="nextPage()"/>
-  <script>
+  <!-- <script>
       function nextPage(){
           location.href="result.html"
       }
-  </script>
+  </script> -->
   <h2>=======</h2>  
   <h2>項目の説明</h2>
   <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒アロマ：香り</abbr></p>
