--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -5,12 +5,14 @@
 </head>
   
 <body>
-    <input type="botton" value="最初のページへ" onclick="history_back()">
-<script>
+ <form action = "/back", method="POST">
+    <input type="submit" value="最初のページへ">
+ </form>
+<!-- <script>
     function history_back(){
         location.href="index.html"
     }
-</script>
+</script> -->
 
 <h1>あなたに合うコーヒー豆</h1>
 
