--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -5,7 +5,7 @@
 </head>
   
 <body>
-    <input type="botton" value="最初のページへ" onclick="history_back()">
+    <input type="button" class="btn btn-warning" value="最初のページへ" onclick="history_back()">
 <script>
     function history_back(){
         location.href="index.html"
