add result species

--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -16,8 +16,8 @@
 
 <h1>あなたに合うコーヒー豆</h1>
 
-{% for been in res %}
-<p>{{been}}</p>
+{% for s,c in beens %}
+<p>{{s}}  |  {{c}}</p>
 {% endfor %}
 
 </body>
