--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>コーヒー豆推薦</title>
     <script src = "../static/main.js"></script>
+    <link rel="stylesheet" href="../static/styles.css" />
 </head>
 
 
 <body>
 <h2>My favorite coffee</h2>
-
+<div class="container_2">
 <form action="/index" method="POST">
   <label for="fname">Aroma:</label>
     <select name="Aroma">
@@ -66,15 +67,17 @@
           location.href="result.html"
       }
   </script>
-  <h2>=======</h2>  
-  <h2>項目の説明</h2>
-  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒アロマ：香り</abbr></p>
-  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒フレーバ：味</abbr></p>
-  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒後味：飲んだ後に残る味</abbr></p>
-  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒酸味：コーヒー豆の酸度</abbr></p>
-  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒甘さ：コーヒー豆の糖度</abbr></p>
-  <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒深み：コーヒー豆のコクの度合い</abbr></p>
-  
+</div>
+  <div class="container">
+      <h3>==========</h3>  
+      <h3>項目の説明</h3>
+      <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒アロマ：香り</abbr></p>
+      <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒フレーバ：味</abbr></p>
+      <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒後味：飲んだ後に残る味</abbr></p>
+      <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒酸味：コーヒー豆の酸度</abbr></p>
+      <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒甘さ：コーヒー豆の糖度</abbr></p>
+      <p><abbt title="Hyper Text Markup Language" class="initialsm">⇒深み：コーヒー豆のコクの度合い</abbr></p>
+  </div>
 </form>
 
 <!-- <a href ="go_classification#index"> -->
