デフォルトを変更

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,7 +42,7 @@
     <select class=="Aroma" name= "Aroma" aria-label="Default select example">
       <option value = 5>強い</option>
       <option value = 4>少し強い</option>
-      <option value = 3>普通</option>  
+      <option selected value = 3>普通</option>  
       <option value = 2>少し弱い</option>
       <option value = 1>弱い</option>
     </select>
@@ -52,7 +52,7 @@
     <select class="Flavor" name= "Flavor" aria-label="Default select example">
       <option value = 5>強い</option>
       <option value = 4>少し強い</option>
-      <option value = 3>普通</option>
+      <option selected value = 3>普通</option>
       <option value = 2>少し弱い</option>
       <option value = 1>弱い</option>
     </select>
@@ -63,7 +63,7 @@
     <select class="Aftertaste" name="Aftertaste" aria-label="Default select example">
       <option value = 5>強い</option>
       <option value = 4>少し強い</option>
-      <option value = 3>普通</option>
+      <option selected value = 3>普通</option>
       <option value = 2>少し弱い</option>
       <option value = 1>弱い</option>
     </select>
@@ -73,7 +73,7 @@
     <select class="Acidity" name="Acidity" aria-label="Default select example">
       <option value = 5>強い</option>
       <option value = 4>少し強い</option>
-      <option value = 3>普通</option>
+      <option selected value = 3>普通</option>
       <option value = 2>少し弱い</option>
       <option value = 1>弱い</option>
     </select>
@@ -83,7 +83,7 @@
     <select class="Sweetness" name="Sweetness" aria-label="Default select example">
       <option value = 5>強い</option>
       <option value = 4>少し強い</option>
-      <option value = 3>普通</option>
+      <option selected value = 3>普通</option>
       <option value = 2>少し弱い</option>
       <option value = 1>弱い</option>
     </select> 
@@ -91,15 +91,17 @@
 <div class="container">
   <label for="fname">深み:</label>
     <select class="Body" name="Body" aria-label="Default select example">
+      <option selected>Open this select menu</option>
       <option value = 5>強い</option>
       <option value = 4>少し強い</option>
-      <option value = 3>普通</option>
+      <option selected value = 3>普通</option>
       <option value = 2>少し弱い</option>
       <option value = 1>弱い</option>
     </select>
 </div>
+  <button type="submit" class="btn btn-primary">豆を探す</button>
+</form>
 
-  <input type="submit" value="豆を探す"onclick="nextPage()"/>
   <div class="container_2">
     <div  class="container_t">
       <h2>項目の説明</h2>
@@ -158,7 +160,7 @@
     <p class="mb-0">HackU2021_B2B3B4連合 </p>
     </div>
   
-</form>
+
 
 <!-- <a href ="go_classification#index"> -->
 <!-- <form action="/index" method="POST">
