デザイン変更

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,6 @@
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand">My favorite coffee</a>
-      <li><a href="#"><img src="../static/fig/coffee_Icon.ico" class="ui-li-icon"/></a> </li>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
@@ -98,7 +97,7 @@
       <option value = 1>弱い</option>
     </select>
 </div>
-  <button type="submit" class="btn btn-primary">豆を探す</button>
+  <button type="submit" class="btn btn-secondary">豆を探す</button>
 </form>
 
   <div class="container_2">
