--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -13,7 +13,7 @@
 
 <div class="d-flex align-items-center justify-content-center" style="height:100px;">
     <form action = "/back", method="POST">
-        <button type="submit" class="btn btn-primary">もう一度探す</button>
+        <button type="submit" class="btn btn-secondary">もう一度探す</button>
     </form>
 </div>
 
