--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -5,10 +5,17 @@ h2 {
     font-weight:900;
     
 }
-label,th,P,td {
+label,th,td {
     font-size: 15px;
     text-align:center;
     color:rgb(247, 246, 239);
+    font-weight: 600;
+    
+}
+P{
+    font-size: 15px;
+    text-align:center;
+    color:black;
     font-weight: 600;
     
 }
