--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -4,6 +4,14 @@
     <title>コーヒー豆の推薦</title>
     <link rel="icon" href="../static/fig/coffee_Icon.ico">
     <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
+    <style>
+      *{
+        font-family: 'Noto Sans JP', sans-serif;
+      }
+    </style>
 </head>
 
 <body>
