--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,6 +33,7 @@
     </div>
   </nav>
 
+
 <form action="/index" method="POST">
 <div class="container_t">
   <div class="container">
@@ -102,117 +103,71 @@
   <button type="submit" class="btn btn-primary">豆を探す</button>
 </form>
 
-  <div class="container_2">
-    <div  class="container_t">
-      <h2>項目の説明</h2>
-    </div>
-    <div  class="container">
-      <table class="table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>項目</th>
-          <th>意味</th>
-          <th>English</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>アロマ</td>
-          <td>香り</td>
-          <td>Aroma</td>
-        </tr>
-        <tr>
-        <td>2</td>
-        <td>フレーバ</td>
-          <td>味</td>
-          <td>Flavor</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>後味</td>
-          <td>飲んだ後に残る味</td>
-          <td>Aftertaste</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>酸味</td>
-          <td>コーヒー豆の酸度</td>
-          <td>Acidity</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>甘さ</td>
-          <td>コーヒー豆の糖度</td>
-          <td>Sweetness </td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>深み</td>
-          <td>コーヒー豆の コクの度合い</td>
-          <td>Body</td>
-        </tr>
-      </tbody>
-    </table>
-    </div>
+<div class="row">
+  <!--項目の説明，変更by eurus-->
+<!-- https://mystyle.ucc.co.jp/magazine/a_1231/#:~:text=%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E8%B1%86%E3%81%8C%E3%81%9D%E3%81%AE%E4%B8%80%E7%94%9F,%E6%94%BE%E3%81%9F%E3%82%8C%E3%82%8B%E3%81%AE%E3%81%A7%E3%81%99%E3%80%82 -->
+<div class="card" style="width: 15rem;">
+<div class="card-body">
+  <h5 class="card-title">アロマ</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Aroma</h6>
+  <p class="card-text">抽出後の液体の香り</p>
+  <a href="https://mystyle.ucc.co.jp/magazine/a_1231/#:~:text=%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E8%B1%86%E3%81%8C%E3%81%9D%E3%81%AE%E4%B8%80%E7%94%9F,%E6%94%BE%E3%81%9F%E3%82%8C%E3%82%8B%E3%81%AE%E3%81%A7%E3%81%99%E3%80%82" class="card-link">Know More</a>
+</div>
+</div>
+
+<div class="card" style="width: 15rem;">
+<div class="card-body">
+  <h5 class="card-title">フレーバ</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Flavor</h6>
+  <p class="card-text">口に含んだ時の香り</p>
+  <a href="https://mystyle.ucc.co.jp/magazine/a_1231/#:~:text=%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E8%B1%86%E3%81%8C%E3%81%9D%E3%81%AE%E4%B8%80%E7%94%9F,%E6%94%BE%E3%81%9F%E3%82%8C%E3%82%8B%E3%81%AE%E3%81%A7%E3%81%99%E3%80%82" class="card-link">Know More</a>
+</div>
+</div>
+
+<div class="card" style="width: 15rem;">
+<div class="card-body">
+  <h5 class="card-title">後味</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Aftertaste</h6>
+  <p class="card-text">飲んだ後に残る味</p>
+  <a href="https://diamond.jp/articles/-/222311" class="card-link">Know More</a>
+</div>
+</div>
+
+<div class="card" style="width: 15rem;">
+<div class="card-body">
+  <h5 class="card-title">酸味</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Acidity</h6>
+  <p class="card-text">コーヒー豆の酸度</p>
+  <a href="https://www.ejcra.org/column/ca_38.html" class="card-link">Know More</a>
+
+</div>
+</div>
+
+<div class="card" style="width: 15rem;">
+<div class="card-body">
+  <h5 class="card-title">甘さ</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Sweetness</h6>
+  <p class="card-text">コーヒー豆の糖度</p>
+  <a href="https://daiohs.com/coffee/article/archives/263#:~:text=%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E3%81%AE%E7%94%98%E3%81%BF%E3%81%AF%E7%84%99,%E3%82%92%E8%A6%8B%E6%A5%B5%E3%82%81%E3%81%A6%E4%BB%95%E4%B8%8A%E3%81%92%E3%81%BE%E3%81%99%E3%80%82" class="card-link">Know More</a>
+</div>
+</div>
+
+<div class="card" style="width: 15rem;">
+<div class="card-body">
+  <h5 class="card-title">深み</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Body</h6>
+  <p class="card-text">コーヒー豆の濃度</p>
+  <a href="https://www.inic-market.com/note/body_in_taste/" class="card-link">Know More</a>
+
+</div>
+</div>
+</div>
+
+ 
     <hr>
     <p class="mb-0">HackU2021_B2B3B4連合 </p>
     </div>
-<!--項目の説明，変更by eurus-->
-<!-- https://mystyle.ucc.co.jp/magazine/a_1231/#:~:text=%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E8%B1%86%E3%81%8C%E3%81%9D%E3%81%AE%E4%B8%80%E7%94%9F,%E6%94%BE%E3%81%9F%E3%82%8C%E3%82%8B%E3%81%AE%E3%81%A7%E3%81%99%E3%80%82 -->
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">アロマ</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Aroma</h6>
-    <p class="card-text">コーヒー抽出後の液体の香り</p>
-    <a href="https://mystyle.ucc.co.jp/magazine/a_1231/#:~:text=%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E8%B1%86%E3%81%8C%E3%81%9D%E3%81%AE%E4%B8%80%E7%94%9F,%E6%94%BE%E3%81%9F%E3%82%8C%E3%82%8B%E3%81%AE%E3%81%A7%E3%81%99%E3%80%82" class="card-link">Know More</a>
-  </div>
-</div>
 
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">フレーバ</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Flavor</h6>
-    <p class="card-text">コーヒーを口に含んだ時の香り</p>
-    <a href="https://mystyle.ucc.co.jp/magazine/a_1231/#:~:text=%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E8%B1%86%E3%81%8C%E3%81%9D%E3%81%AE%E4%B8%80%E7%94%9F,%E6%94%BE%E3%81%9F%E3%82%8C%E3%82%8B%E3%81%AE%E3%81%A7%E3%81%99%E3%80%82" class="card-link">Know More</a>
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">後味</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Aftertaste</h6>
-    <p class="card-text">コーヒーを飲んだ後に残る味</p>
-    
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">酸味</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Acidity</h6>
-    <p class="card-text">コーヒー豆の酸度</p>
-    
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">甘さ</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Sweetness</h6>
-    <p class="card-text">コーヒー豆の糖度</p>
-    <a href="https://daiohs.com/coffee/article/archives/263#:~:text=%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E3%81%AE%E7%94%98%E3%81%BF%E3%81%AF%E7%84%99,%E3%82%92%E8%A6%8B%E6%A5%B5%E3%82%81%E3%81%A6%E4%BB%95%E4%B8%8A%E3%81%92%E3%81%BE%E3%81%99%E3%80%82" class="card-link">Know More</a>
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">深み</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Body</h6>
-    <p class="card-text">コーヒー豆の濃度</p>
-  </div>
-</div>
 
 <!-- <a href ="go_classification#index"> -->
 <!-- <form action="/index" method="POST">
